Add scope, exception logging, Problem details (#2)
* log

* Add scoped logging

* Add async & cleanup

* log cleanup

* update readme

* move to logger ext method

* Log excepion with filter

* Handle on logging with context

* More logging/excepiton tweaks

* add better log and problemdetails examples

* add LoggerMessage attribute and test

* update readme
