# src/Controllers/LoggerController.cs
@@ -4,21 +4,16 @@
  * Test API to show using IOptions and IConfiguration
  *
  * OpenAPI spec version: 1.0.0-oas3
- * Contact: myemail@aisreview.com
+ * Contact: myemail@bogus.com
  * Generated by: https://github.com/swagger-api/swagger-codegen.git
  */
-using System;
-using System.Collections.Generic;
 using Microsoft.AspNetCore.Mvc;
 using Swashbuckle.AspNetCore.Annotations;
-using Swashbuckle.AspNetCore.SwaggerGen;
+using IOptionTest.Models;
+using IOptionTest.Attributes;
+using System.Diagnostics;
+using Microsoft.Extensions.Logging.Abstractions;
 using System.ComponentModel.DataAnnotations;
-using IO.Swagger.Attributes;
-
-using Microsoft.AspNetCore.Authorization;
-using IOptionTest;
-using System.Threading.Tasks;
-using OptionsLoggerTest.Interfaces;
 
 namespace IOptionTest.Controllers
 {
@@ -26,12 +21,15 @@ namespace IOptionTest.Controllers
     ///
     /// </summary>
     [ApiController]
-    public class LoggerApiController : ControllerBase
+    public partial class LoggerController : ControllerBase
     {
-        private readonly ILogger<LoggerApiController> _logger;
+        private ILogger<LoggerController> _logger;
         static string EyeCatcher = "OOOOOOOOOOOOOOOOOOO";
 
-        public LoggerApiController(ILogger<LoggerApiController> logger)
+        [LoggerMessage(0, LogLevel.Information, "This is to say: {Message}")]
+        partial void LogMessage(string message);
+
+        public LoggerController(ILogger<LoggerController> logger)
         {
             _logger = logger;
         }
@@ -51,6 +49,37 @@ namespace IOptionTest.Controllers
             _logger.Log(message.Level, "{eyeCatcher} Logging with {level} and message {message}",
                                             EyeCatcher, message.Level, message._Message);
             return Ok();
+        }
+
+        /// <summary>
+        /// Log messages with LoggerMessage and LogInformation
+        /// </summary>
+        /// <param name="body">Message to log</param>
+        /// <param name="logCount"></param>
+        /// <response code="200">Ok</response>
+        /// <response code="400">bad input parameter</response>
+        [HttpPost]
+        [Route("/api/logger/{logCount:int}")]
+        [ValidateModelState]
+        [SwaggerOperation("LogMessageCount")]
+        [SwaggerResponse(statusCode: 200, type: typeof(Timings), description: "Ok")]
+        public virtual ActionResult<Timings> LogMessageCount([FromBody] Message message, [FromRoute][Required] int logCount)
+        {
+            _logger = NullLogger<LoggerController>.Instance;
+
+            var sw = Stopwatch.StartNew();
+            for (int i = 0; i < logCount; i++)
+                _logger.Log(message.Level, "This is to say: {Message}", message._Message);
+            sw.Stop();
+
+            var timing = new Timings { LogMs = sw.ElapsedMilliseconds };
+            sw.Restart();
+            for (int i = 0; i < logCount; i++)
+                LogMessage(message._Message);
+            sw.Stop();
+            timing.LoggerMs = sw.ElapsedMilliseconds;
+
+            return Ok(timing);
         }
     }
 }
