# src/Models/Timings.cs
@@ -11,34 +11,42 @@
  * Contact: myemail@bogus.com
  * Generated by: https://github.com/swagger-api/swagger-codegen.git
  */
+using System;
+using System.Linq;
+using System.IO;
 using System.Text;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
 using System.ComponentModel.DataAnnotations;
 using System.Runtime.Serialization;
 using System.Text.Json;
 
-namespace IOptionTest.Models
-{
+namespace IOptionTest
+{ 
     /// <summary>
-    /// Message to send
+    /// Log timings
     /// </summary>
     [DataContract]
-    public partial class Message : IEquatable<Message>
-    {
+    public partial class Timings : IEquatable<Timings>
+    { 
         /// <summary>
-        /// Gets or Sets _Message
+        /// Ms to call logger.Information
         /// </summary>
+        /// <value>Ms to call logger.Information</value>
         [Required]
 
-        [DataMember(Name = "message")]
-        public string _Message { get; set; }
+        [DataMember(Name="logMs")]
+        public long LogMs { get; set; }
 
         /// <summary>
-        /// Gets or Sets Level
+        /// Ms to call logger message fn
         /// </summary>
+        /// <value>Ms to call logger message fn</value>
         [Required]
 
-        [DataMember(Name = "level")]
-        public LogLevel Level { get; set; }
+        [DataMember(Name="loggerMs")]
+        public long LoggerMs { get; set; }
 
         /// <summary>
         /// Returns the string presentation of the object
@@ -47,9 +55,9 @@ namespace IOptionTest.Models
         public override string ToString()
         {
             var sb = new StringBuilder();
-            sb.Append("class Message {\n");
-            sb.Append("  _Message: ").Append(_Message).Append("\n");
-            sb.Append("  Level: ").Append(Level).Append("\n");
+            sb.Append("class Timings {\n");
+            sb.Append("  LogMs: ").Append(LogMs).Append("\n");
+            sb.Append("  LoggerMs: ").Append(LoggerMs).Append("\n");
             sb.Append("}\n");
             return sb.ToString();
         }
@@ -72,28 +80,27 @@ namespace IOptionTest.Models
         {
             if (ReferenceEquals(null, obj)) return false;
             if (ReferenceEquals(this, obj)) return true;
-            return obj.GetType() == GetType() && Equals((Message)obj);
+            return obj.GetType() == GetType() && Equals((Timings)obj);
         }
 
         /// <summary>
-        /// Returns true if Message instances are equal
+        /// Returns true if Timings instances are equal
         /// </summary>
-        /// <param name="other">Instance of Message to be compared</param>
+        /// <param name="other">Instance of Timings to be compared</param>
         /// <returns>Boolean</returns>
-        public bool Equals(Message other)
+        public bool Equals(Timings other)
         {
             if (ReferenceEquals(null, other)) return false;
             if (ReferenceEquals(this, other)) return true;
 
-            return
+            return 
                 (
-                    _Message == other._Message ||
-                    _Message != null &&
-                    _Message.Equals(other._Message)
-                ) &&
+                    LogMs == other.LogMs ||
+                   LogMs.Equals(other.LogMs)
+                ) && 
                 (
-                    Level == other.Level ||
-                   Level.Equals(other.Level)
+                    LoggerMs == other.LoggerMs ||
+                   LoggerMs.Equals(other.LoggerMs)
                 );
         }
 
@@ -107,28 +114,28 @@ namespace IOptionTest.Models
             {
                 var hashCode = 41;
                 // Suitable nullity checks etc, of course :)
-                if (_Message != null)
-                    hashCode = hashCode * 59 + _Message.GetHashCode();
-
-                hashCode = hashCode * 59 + Level.GetHashCode();
+                    
+                    hashCode = hashCode * 59 + LogMs.GetHashCode();
+                    
+                    hashCode = hashCode * 59 + LoggerMs.GetHashCode();
                 return hashCode;
             }
         }
 
         #region Operators
-#pragma warning disable 1591
+        #pragma warning disable 1591
 
-        public static bool operator ==(Message left, Message right)
+        public static bool operator ==(Timings left, Timings right)
         {
             return Equals(left, right);
         }
 
-        public static bool operator !=(Message left, Message right)
+        public static bool operator !=(Timings left, Timings right)
         {
             return !Equals(left, right);
         }
 
-#pragma warning restore 1591
+        #pragma warning restore 1591
         #endregion Operators
     }
 }
